 OperatingSystem.hasJava14()
 OperatingSystem.hasJava15()
 GUIUtilities.centerOnScreen(Window win)
 GUIUtilities.loadStyles(String family, int size)
 GUIUtilities.loadStyles(String family, int size, boolean color)
 GUIUtilities.parseStyle(String str, String family, int size, boolean color)
 GUIUtilities.parseColor(String name, Color defaultColor)
 GUIUtilities.getColorHexString(Color c)
 BeanShell.runScript(View view, String path, Reader in, boolean ownNamespace, boolean rethrowBshErrors)
 BeanShell.eval(View view, NameSpace namespace, String command, boolean rethrowBshErrors)
 EditAction.getView(Component comp)
 EditBus.getComponents()
 JarClassLoader.getZipFile()
 MiscUtilities.charsToEscapes(String str)
 MiscUtilities.getLeadingWhiteSpace(String str)
 MiscUtilities.getTrailingWhiteSpace(String str)
 MiscUtilities.getVirtualWidth(Segment seg, int tabSize)
 MiscUtilities.getOffsetOfVirtualColumn(Segment seg, int tabSize, int column, int[] totalVirtualWidth)
 MiscUtilities.createWhiteSpace(int len, int tabSize, int start)
 MiscUtilities.globToRE(String glob)
 MiscUtilities.quicksort(Vector vector, Comparator compare)
 MiscUtilities.quicksort(Object[] obj, Compare compare)
 MiscUtilities.MenuItemCompare
 MiscUtilities.getEncodings()
 MiscUtilities.parseXML(InputStream in, DefaultHandler handler)
 MiscUtilities.findEntity(String systemId, String test, Class where)
 MiscUtilities.charsToEntities(String str)
 MiscUtilities.stringsEqual(String s1, String s2)
 MiscUtilities.objectsEqual(Object o1, Object o2)
 MiscUtilities.KB_FORMAT
 MiscUtilities.MB_FORMAT
 MiscUtilities.formatFileSize(long length)
 SegmentCharSequence.SegmentCharSequence(Segment seg, boolean reverse)
 PluginJar.getActions()
 Registers.StringRegister
 jEdit.getActionSetForAction(EditAction action)
 jEdit.getActions()
 jEdit.openFile(View view, String parent, String path, boolean readOnly, boolean newFile)